--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -71,6 +71,7 @@
     "@types/express": "^4.17.6",
     "@types/json-diff": "^0.5.1",
     "@types/jsonwebtoken": "^8.5.2",
+    "@types/level": "^6.0.1",
     "@types/localtunnel": "^1.9.0",
     "@types/lodash.get": "^4.4.6",
     "@types/lodash.intersection": "^4.4.7",
@@ -80,6 +81,7 @@
     "@types/lodash.set": "^4.3.6",
     "@types/lodash.split": "^4.4.7",
     "@types/lodash.unset": "^4.5.7",
+    "@types/luxon": "^3.0.2",
     "@types/node": "^16.11.22",
     "@types/parseurl": "^1.3.1",
     "@types/passport-jwt": "^3.0.6",
@@ -112,6 +114,7 @@
     "bull": "^3.19.0",
     "callsites": "^3.1.0",
     "change-case": "^4.1.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.1",
     "client-oauth2": "^4.2.5",
     "compression": "^1.7.4",
@@ -133,6 +136,7 @@
     "jsonschema": "^1.4.1",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "~1.12.1",
+    "level": "^8.0.0",
     "localtunnel": "^2.0.0",
     "lodash.get": "^4.4.2",
     "lodash.intersection": "^4.4.0",
@@ -142,6 +146,7 @@
     "lodash.set": "^4.3.2",
     "lodash.split": "^4.4.2",
     "lodash.unset": "^4.5.2",
+    "luxon": "^3.1.0",
     "mysql2": "~2.3.0",
     "n8n-core": "~0.140.1",
     "n8n-editor-ui": "~0.166.1",
@@ -163,6 +168,7 @@
     "sqlite3": "^5.0.2",
     "sse-channel": "^3.1.1",
     "swagger-ui-express": "^4.3.0",
+    "threads": "^1.7.0",
     "tslib": "1.14.1",
     "typeorm": "0.2.45",
     "uuid": "^8.3.2",
