--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -75,11 +75,14 @@
     "@types/localtunnel": "^1.9.0",
     "@types/lodash.get": "^4.4.6",
     "@types/lodash.intersection": "^4.4.7",
+    "@types/lodash.iteratee": "^4.7.7",
     "@types/lodash.merge": "^4.6.6",
     "@types/lodash.omit": "^4.5.7",
     "@types/lodash.pick": "^4.4.7",
+    "@types/lodash.remove": "^4.7.7",
     "@types/lodash.set": "^4.3.6",
     "@types/lodash.split": "^4.4.7",
+    "@types/lodash.unionby": "^4.8.7",
     "@types/lodash.unset": "^4.5.7",
     "@types/luxon": "^3.0.2",
     "@types/node": "^16.11.22",
@@ -140,11 +143,14 @@
     "localtunnel": "^2.0.0",
     "lodash.get": "^4.4.2",
     "lodash.intersection": "^4.4.0",
+    "lodash.iteratee": "^4.7.0",
     "lodash.merge": "^4.6.2",
     "lodash.omit": "^4.5.0",
     "lodash.pick": "^4.4.0",
+    "lodash.remove": "^4.7.0",
     "lodash.set": "^4.3.2",
     "lodash.split": "^4.4.2",
+    "lodash.unionby": "^4.8.0",
     "lodash.unset": "^4.5.2",
     "luxon": "^3.1.0",
     "mysql2": "~2.3.0",
